Bug 1095145: Remove compileAndGoGlobal argument to Debugger::onNewScript, and simplify accordingly. r=shu